# bevy-inspector-egui

crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
crates/bevy-inspector-egui/examples/basic/: inspector_options.rs  resource_inspector_manual.rs
crates/bevy-inspector-egui/examples/integrations/: egui_dock.rs  side_panel.rs
crates/bevy-inspector-egui/examples/quick/: asset_inspector.rs  resource_inspector.rs  state_inspector.rs
crates/bevy-inspector-egui/src/: quick.rs  restricted_world_view.rs  utils.rs
crates/bevy-inspector-egui/src/bevy_inspector/: hierarchy.rs  mod.rs
crates/bevy-inspector-egui/src/inspector_egui_impls/: bevy_impls.rs  glam_impls.rs  image.rs  mod.rs
crates/bevy-inspector-egui/src/reflect_inspector/: mod.rs
