[package]
name = "bevy-inspector-egui"
version = "0.17.0"
edition = "2021"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Inspector plugin for the bevy game engine"
documentation = "https://docs.rs/bevy-inspector-egui"
keywords = ["bevy", "inspector", "egui", "editor", "reflect"]
categories = ["game-development", "gui", "visualization", "development-tools::procedural-macro-helpers"]

[features]
default = ["bevy_pbr", "highlight_changes"]
highlight_changes = []

[dependencies]
bevy-inspector-egui-derive = { version = "0.17.0", path = "../bevy-inspector-egui-derive" }
bevy_app = { version = "0.10" }
bevy_asset = { version = "0.10" }
bevy_core = { version = "0.10" }
bevy_ecs = { version = "0.10" }
bevy_hierarchy = { version = "0.10" }
bevy_log = { version = "0.10" }
bevy_math = { version = "0.10" }
bevy_reflect = { version = "0.10" }
bevy_utils = { version = "0.10" }

bevy_core_pipeline = { version = "0.10" }
bevy_pbr = { version = "0.10", optional = true }
bevy_render = { version = "0.10" }

egui = "0.21.0"
bevy_egui = "0.20.0"

image = { version = "0.24.5", default-features = false }
once_cell = "1.16.0"
pretty-type-name = "1.0.0"
smallvec = "1.10.0"

[dev-dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_render", "x11", "bevy_winit", "animation", "png", "bevy_pbr", "bevy_sprite"] }
egui_dock = "0.3"
egui-gizmo = "0.9"
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "670a4b86f53386d1545377130f71a09689444b67", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
bevy_mod_picking = { git = "https://github.com/Fincap/bevy_mod_picking", rev = "670a4b86f53386d1545377130f71a09689444b67", default-features = false }

bevy_framepace = "0.11"


[[example]]
name = "inspector_options"
path = "examples/basic/inspector_options.rs"

[[example]]
name = "resource_inspector_manual"
path = "examples/basic/resource_inspector_manual.rs"

[[example]]
name = "resource_inspector"
path = "examples/quick/resource_inspector.rs"

[[example]]
name = "filter_query_inspector"
path = "examples/quick/filter_query_inspector.rs"

[[example]]
name = "asset_inspector"
path = "examples/quick/asset_inspector.rs"

[[example]]
name = "world_inspector"
path = "examples/quick/world_inspector.rs"

[[example]]
name = "world_inspector_assets"
path = "examples/quick/world_inspector_assets.rs"

[[example]]
name = "state_inspector"
path = "examples/quick/state_inspector.rs"

[[example]]
name = "egui_dock"
path = "examples/integrations/egui_dock.rs"

[[example]]
name = "side_panel"
path = "examples/integrations/side_panel.rs"
